[workspace]
members = [
    "crates/indexbrain-core",
    "crates/indexbrain-collector",
    "crates/indexbrain-server",
    "crates/indexbrain-cli",
    "crates/indexbrain-features",
    "crates/indexbrain-bandit",
    "crates/indexbrain-planner",
    "crates/indexbrain-whatif",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
