[package]
name = "indexbrain-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexbrain"
path = "src/main.rs"

[dependencies]
indexbrain-core = {path = "../indexbrain-core"}
indexbrain-collector = {path = "../indexbrain-collector"}
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde_json = "1"
indexbrain-features = {path = "../indexbrain-features"}
indexbrain-bandit = {path = "../indexbrain-bandit"}