[package]
name = "indexbrain-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
indexbrain-core = { path = "../indexbrain-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
chrono = "0.4"
tracing-subscriber = "0.3"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
anyhow = "1"