[package]
name = "indexbrain-planner"
version.workspace = true
edition.workspace = true

[dependencies]
indexbrain-core = { path = "../indexbrain-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
tracing = "0.1"
sqlx = "0.9.0"
serde_json = "1.0.150"